--- a/code/.env
+++ b/code/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2iLjCtgzrEUAn4+3XVANB/rkopqGf8MMBuXp9NuzPgg=
 APP_DEBUG=true
 APP_URL=http://localhost/
 
